Core library updated

--- a/.htaccess
+++ b/.htaccess
@@ -12,3 +12,18 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule (.*)\.json$ core/json.php       [QSA,L]
 
+
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule (.*)_frame/(.*)\.js$ core/js.php?id=$2       [QSA,L]
+
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule (.*)_js/(.*)\.js$ core/jquery.php?id=$2       [QSA,L]
+
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule (.*)assests/(.*) core/files.php?id=$2       [QSA,L]
